<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.DetailUser"
    android:background="@color/white"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:civ_border_color="@color/primaryColor"
                app:civ_border_width="3dp"
                android:src="@color/white"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#474787"/>

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/company"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="#474787"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="#474787"/>

            <TextView
                android:id="@+id/follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/following"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/following"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textColor="#474787"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    app:tabTextColor="@android:color/white"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>